--- a/Mano Amiga/Form1.resx
+++ b/Mano Amiga/Form1.resx
@@ -117,4 +117,192 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="pictureBox1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAAW8AAAFvCAYAAACFPEoUAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAACplSURBVHhe7d1B6CXZdR5wbbIIATF7w3i2CQh3FrMUHrQ2Sq+FMLPSRiAaZjkQDQZD0IBpiMWo
+        jSIa0XhoRKNmPAQRGBiBsSWCTS8yTEBe9CyScSCROpEsy9Gi832d96TX1V+9V/Xq3HvPvfUtftg68/+f
+        eq//dc87795bVZ95+vSpmZl1RgbNzCw3GTQzs9xk0MzMcpNBMzPLTQbNzCw3GTQzs9xk0MzMcpNBMzPL
+        TQbNzCw3GTQzs9xk0MzMcpNBMzPLTQbNzCw3GTQzs9xk0MzMcpNBMzPLTQbNzCw3GTQzs9xk0MzMcpNB
+        MzPLTQbNzCw3GTQzs9xk0MzMcpNBMzPLTQbNzCw3GTQzs9xk0MzMcpNBMzPLTQbNzCw3GTQzs9xk0MzM
+        cpNBMzPLTQbNzCw3GTQzs9xk0MzMcpNBMzPLTQbNzCw3GTQzs9xk0MzMcpNBq+Nf/sdfvgSvHamfMcvi
+        f/37z7wErx3cUD9j9ciglXEo1q/DQ3gCT4XHcBduqhxmtRyK9evwEJ7AU+Ex3AU3H5XJoMVDMX4L5gr2
+        HBZyF3GrCoWYRfstmCvYc1jIXcQrkUGLg+J7Ax4divG12Km/pPKbRULxvXEowqo4L8VO3edrYTJoMVBw
+        OUWyttueww8AzzNaMSi4nCJRxfgaj8AFvCAZtO1QaLkIqYrwFvwg8ICwcCi0kYX7yAW8IBnMDgWMUxG3
+        gNMJHwKLGvH/Z4zzy826VBz7FYjquKceqWOaXQsFllMla+e3l/pQHbMWHP8m3ObrOOBr4rQQ/38utPJD
+        q8sPGBnMCoWL0xBr5o/5s6+rXCXhmPwQUa8nylvquGbXQPFihzwtupFuqeOWguNds+DKQv6KypeVDGaD
+        YsVOe0tBrDZfjOOUmC6Z8vSJhUDBKjFdMsUiWuV8xXHYaW/5FsEuvYuxJYOZoEjdPBQrVcTWYI7iXTiO
+        UbrrPnL3bZuhUG3dWbJU8bGHY7B7Vsdeq4u5ehnMAgWK0ySqcG1R7CRCbs51q2OW0tXXPMsFBapG131U
+        dK0G+aMK91H6Ai6DGaAwcapEFawIRaZQkJeLqOp4pdxVr8NsCRSnWl33UZFiiLyc6lDH2yp1AZfB1lCU
+        eBk5ry5UBSsCc4f/UZCTl7Wr45Xk7ttWQ1Higp4qWCWFX33JnJNjRLutjpuBDLaGgsStfqpQRQqfM0bO
+        WvPdp9x92yooSNyNUWpr4DnhYw45a3x7SNkgyWBLKEbsukvtkT4VvmMD+VoUb3L3bYuhGLXouim0eCNf
+        rTn7lA2SDLaEQlRikXJO6MmEfK2Kd/ruG6/xeOvbIT9oMMB5oQu/wqd+f3h9rbpuii7eNefs0819y2BL
+        GNy8QlIVqFLCBhtytSrelKZo4LUsufUt997fhi7v14LBzP3E3OEwV0AY539PdZc9vJ5WXTeFFW/kqrlT
+        hqpf7HeJDLaEwVxjyuRUWNfKXJPcNTW9DJnwGli0r7n1LT/0uriVKAcxrO34+PPNb+2L19Cy66awvzFy
+        1ey6Kd3CpQy2NBnUtYR0rchTe6vgVLMCiGNza+fWHUJpV/YxeF+BrZeRN71VKo7dsuumkPeOPC3eR/Pm
+        aEoGW8HgrXFpuRLSfSNP7Yt0ppqcYDhu5DoFp1NSzS9i4EbeuIkdY/WpIhyTHz4tu+6Qi3SQp9W3Bxfv
+        czBoWxVviuq+W857U9XuG8crscCcpoBj0Ja44x7zVX1/OF70FYhrhdycCnlafXtw8T4HA7bkVZWXRHXf
+        LT+AqNpJhmOV/Hs130GDAVuyy6t2a18ci123eg21hHxYMcchlzpGaS7el4hBXJO77xVwHHbI6vhRmi7y
+        YcByjloN5CjhF60oOE7rrjvkfTLPJG9NLt6XYMCWvCz+kpA/EPIM333jGDX24z9Wx64Bg7X0ZddHRbd4
+        Mv/keLVxjr/3rpuqfNCuIYMtYcBy768ayLWEdK3I07r7Ltq1In+tD9km+2sxWI9PXSmt6A4b5G/ddYf8
+        /ZCn9U6ZZju55shgSxisQ3StyNP6fRTrWpG75tpEkZuIncOBOhm4JRX7OyF3865bva61kKd1193sG+A5
+        MtgaBmvpudRLRum+i3StyFvjxmGnqn5lxWCt1XUfFdk6iLyjdN1DzNlHk8HWMFjdfcco0jEgb+0PpfCb
+        iM3BQK3ZdR+FP+MROVu8j1NRXfcQO2VKkMEMMFiH2LGBPLXv1TIV3n0jZ4tF5Vo7M0o/jFcJf2/IWfvb
+        w5S77sJkMAMM1lG679ZXXYZ33+IYNRTvvjFQa9/s6Ci0QCCfu+4YITtlSpHBLDBYR+m+W96wikK7b5G/
+        lqJd0GGwqkFcWuiOE+Rr3XWH7HRCniHm7EuRwSwwWIeYM0aeobpv5Kt958ejYt03B+pk4NYU9qGEXK27
+        7pBvrMgzxE6ZkmQwEwzWIXZsIE/r7jusQCBXy79Jke6bg3UyeGsKW7BErtZdd8i3VeRx132BDGaCweru
+        O0ZY14o8LS+k4vsIvSqRA3UycGsL2SqIPKN03UPM2Zcmg9lgsA6xYwN5hui+kefmJG9toTet4mCdDN6a
+        nqjXdA3karFT5lRU1z3ETpnSZDAbDNYh5oyRh++j1XwxRXbfLe9BQyHdNwbqrcnArS1ksRJ5Wn97cNdd
+        mQxmhME6xI4N5Kl9deJUVPfd+n1s7r4xUFtfdk1RH0Itvz2Qu+7KZDAjDNZRum8+59Hdd4xNhQ8DtfXN
+        jkKmf5DHXXeMkPdRiwxmhcE6ypzxKN13jdvCnnN18cNAddcdJ2rBdYidMrXIYFYYrEPs2GCOQy51jBp4
+        7JDCgTxddt8YqK277lHmuqO+PbjrXkkGM8NgdfcdI2TQIU/r7vuhel3nYKC27rrDbnaEPK277qhvD0Ps
+        lKlJBjPDYB1ixwZzHHKpY9QySve9auBhoLbuukMaAORpvVPGc/YNyWB2GKzesRFjlO578eDDQB2i62aO
+        Qy51jFpGmbPvrusmGcwOg9U7NuLsqvvGQB3iFqPMM8lbm7vuxmSwBxis3rERI6r7Tn8LXwzUIW7szxyH
+        XOoYtYzSdRd5ilENMtgDDFbv2IgT9T5S38IXA9VddwzvlElABnuBweo54xird2woyJO2+8ZAddcdI+R9
+        EPIMsVOmFRnsBQard2zECVm0QZ6U3TcG6hC3GEWeUXbKuOveSAZ7gsHq7jtGyMIN8qS7hS8G6hA39kce
+        75SJ03XXTTLYEwxWdt/esRFjlO77uS4XA3WUrvv2JG9t3imTiAz2hoN1Mnhri+q+W98ne7juGwP1xmTg
+        1hbVdXvOPk73XTfJYI84YCcDuLao7jv1jo2lkCdF942BOsQtRpHHO2VihD7suSUZvBYGDDsuzkFz4E7x
+        niTskENWqqcOudUgriWq+06/X3oJ5Gl+C18M1CFu7I887rpjhLwPBXn5DY+3K3gIbBhOMcb/Ftrxy+Aa
+        GCScc2bBXtP5spCHf3VBTs8Zx4h6H01vIvbxO7/zXzFg1CCuZZSuO+p9DLFT5hRyctfMmptqsZjfVLnW
+        ksGlMEA4R7tlqx4fZBv2SYhc3rER45F6XWshT7Pu+0sPfqAGTk0h5wLyeKdMjNCuG7nYabMQq2Mtwd/d
+        1MDK4BIYIFFPEH8EkQXc3XeMkG4LeZp03x98+/NqwNQUch4gj3fKxAjrupGL3XbEBxFzXH2eyOAlGBzR
+        AzLyUnPv2IgR0nEhT/Xue6Cu2ztlYoR13chT4uKiq6ZRZPAcDI5SF8WEdeDIM8qcsbvvKwzUdW/5Wh5h
+        lDn7qJ0ypT5M+eGy+gZZMjgHA+PGdKAEC9nGgzzesRGju+77jft31OCoKarr9k6ZGCFdN3NAyXuxrF5n
+        ksE5GBw1OsGQWzQij3dsxIjqvqvcxuCjd15WA6Mmd90nkKd1131Lva61kKfGTplV3xBkUMHAqNXNjjJn
+        3P2OjYOo7rv4TcTcdYcJOXeRxztl1nmijj9HBhUMjofTwVKQ54xPIE/r7juke0Geot23u+4wUe/D+9PX
+        W/yaZVBRg6WgUbrv7uaMZ7Bj3jxvyByHXOoYmyToukOusEWe1l131LeHUbru2u9j8b31ZXAKg6NFEXT3
+        fQJ5WnffISv2zDPJGyJB1x2y1RV5Rum6PWd/ncVTJzI4hcFxazpYKojqvr1jI0ba7nugrrv1AwpGmbPv
+        tet+Zvo65sjgFAZIlZ0CQlT37R0bMdJ136++/+lIXXfrx4K56z6BPK3m7Bf9HWRwCoOkVdHwjo0TyFN8
+        x8YF6brvt++9qU7+mtx1n0Ae75TZbojiTaPMGXexY2OBqO57803E2HV/8s3PqpO/JnfdJ5DHO2W2W3RO
+        yeAUBkrL+4V4zvgEcxxyqWPUEPI+CHk23UTMXXcY75Q5gTxNd8pMX88cGZzCQCl9Wfwl3rFxgnkmeWsL
+        GezIc3X3naDrjrzZUeuu2ztlTiBPy/exeNpHBhUMmJa3WnX3fYI5DrnUMWoJGfDIc9V5laDrDvkgRp5R
+        uu6bk7y1jTJnv/j+TjKoYMBE3b/7WlHdd+v34e77BPKs7r5H6bqZA0bpuj1nH2Px+5BBBYPGOzZiuPue
+        QJ5V3fdAXXfrx4KNMmc/Ste96n3I4BwMHO+XjpFmx8ZG1bvvL7z3sTrpa4rsumvc7Ogcd90nkKerOXsZ
+        nIPB4znjGCHvg5Cn9WPforrvRbcxuHf3y+qkr8ld9wnk8U6ZGKu/PcjgORhA3rERI+rBE6N03xfvn+Ou
+        O0zI+yDk8U6ZGKu/PcjgORhE7r7jNJkzLqDKAzQSdN093dj/nKhvD94pE+OqOXsZvAQDyTs2YlSfMy4k
+        ZMEIeWa77wRdd9TNjoboupkDvFMmxlVz9jJ4CQaTd2zEGaX7Dlk0Qh7ZfSfouqNudjRK1+05+xhXNz4y
+        uAQGlHdsxHD3fQJ5Xui+B+q6Wz+gYJQ5e9p1100yuAQGlXdsxInqvls/eKJI9/3Btz+vTvqaorru1o8F
+        c9d9Anlad92Ln5qjyOBSGFjesREjqvtu/di3qO77N/fS+dKDH6iTviZ33SeY45BLHaMGHnuUrnvT+5DB
+        pTC4PGccp8qOjQqiuu9nW1LddYcZpeuOeh/d75SRwTUwwLxjI0bxHRuVRL2PV9x1h/FOmQnk6X6njAyu
+        gUHm7jtO0R0bFYV0q//5zr/6e3HSV/PHf/5H/069rrWQq3XX7Z0yJ5hnkre2kIZTBtfCYG3xgOJT7r5P
+        IE/r7ntzp4cTvOnlypyuwfvYvCiOXKN03Xwf3XfdzHHIpY5RS0izKYPX4IA9DNxWorrvR5O8tbn7Bpzg
+        TS9X5pTN4X1s6vaQ6+E0d2Wesz/BPJO8tYU0miSD1+BgPZzsrUR136PMGXfbfeMEz9B1H13dfSNX65sd
+        jTJnP0rXzWOHNJkkg9figD056VuI6r6H2rHR0FVdH07wpotJJ1330VVdH3K1vtmRu+4TzDPJW1vI+ziS
+        wWtxsE5O+tq8Y+ME8nT3AA2c4E23cE267qPV3TdyueuOEfU+htkpcySDW+Ak946NGCFdE/J01X3jBM/W
+        dR+t6pqQq7tbjCrI450yMUK7bpLBLXCSu/uOEdJxIE83t/DFCd606374nT9Qr/9ozfvo7sb+CvJ4p0yM
+        8K6bZHArnOTesRFjlO57UdeBE7xp180bYInXfmrR7RiQa5Su2ztlYoR33SSDW+Ek946NGLvpvnGCN+26
+        ecvZyWuec3ZRHLlG6bo9Zx+jSNdNMhgBJ7l3bMTYRfeNEzx71310dksqcrW+7Dqq6/ZOmRhFum6SwQg4
+        yb1jI0ZU9532Fr48wScnfFUruu4j2X0jV+ubHbnrPoE8Q8zZz5HBKDjJW3ffN9XrWgt5Rum+0z1AAyd4
+        88uVV3TdR7L7Ri533TGi3scQO2XmyGAUnOSeM47B7Zeb582YA1J13zjBe+u6j57rvpGrdde96cb+R8jj
+        nTIxinbdJIORcJJ7x0aMkLkz5pnkre037wMneNOu+5Nvfvaarvvoue4b+Vp33SFXFyOPd8rEKNp1kwxG
+        wknu7jvGxR0bSzDHIZc6Ri3PCg1O8KZd99v33lSvbY3j+2jddYfc1wd5vFMmRvGum2QwGk5y79iIMUr3
+        zbnI5l33q+9/ql7bGs+KDfKN0nV7zj5G8a6bZDAaTnLv2IgxTPf98Tu/c1uc9NUEdN3P/NWf/evWi2JR
+        Xbd3ysSo0nWTDJaAE907NmJEdd/NHqDBeeb//qf//J/EiV9FUNf9LMd/++a/+LU6RkXuuk8gT+uuO2SH
+        2xIyWAJOdu/YiBHSfRPyNLmJGHd4iJO+mg07TJ7D7l3lr8hd9wnkGWLOfikZLAUnvOeMY0S9j+o3EWPX
+        LU76qr7yvfvyta3BrpsdvMpf0Shdd9T7GGKnzFIyWApOeu/YiBNywiNP1e67dddNZ277uliCrjvkAxx5
+        vFMmRtWum2SwJJz47r5jhJz0yFOt+87QddPW4p2g6w672RHyjNJ1P5rkra1q100yWBJOfnbf3c8ZM8ch
+        lzpGLV113xm6bto6bTJQ131rkrc2z9lvIIOlYQCMMmfs7nuhLF03bVmwHKXrZo5DLnWMWkaZs6/edZMM
+        loZB4B0bcbrovrN03bRlq2CC9xHVdbd+LJi77o1ksAYMBO/YiBHVfRe7jQHnmMVJ39SFR55JX/z+j2Su
+        itx1TyDPEHP215DBGjAYMnTfXc0ZnxH1PorcRIxPZBcnfXNv3L8jX6/CTv2jd16WeSoapeuOeh9D7JS5
+        lgzWgkHhOeMYIbcDRZ7w7jtj133qW9/96sUpFL6HBHu62WGO0HWHfHsg5Nlt100yWAsGhndsxAlZNEGe
+        0O47a9d9ioWZO0g4LXJ83Szo7MwTvf6Q2zsgzyhd9xA7ZbaQwZowUNx9xwhZOEGesO47e9fdkZCbHSHP
+        EF03cxxyqWPU0rTrJhmsDQPdOzZipOq+e+i6OxHVdQ/xMF7mmeStrXnXTTJYGwa6d2zESNN9u+sOE9V1
+        t34smLvuYDLYAga8d2zEiOq+H07yrvLjO59TJ72t5677BPNM8tYW8j4iyGALGPDesREjqvu++iZiXOgT
+        J72tN0rX7Z0yBchgKxj4njOOEfU+rrqJWIL90KMIubE/8rTuur1TpgAZbAUD3zs2YkQ99m119+2uO0zI
+        uYg8zbtu9brWQh533RMy2BIKgLvvGFGPfVvVfbvrDhNyHiLPKF33EHP2kWSwJRQA79iIUb37dtcdJqrr
+        HuJhvMgzxE6ZaDLYGgqBd2zEqNp9u+sOEzXX3fqxYO66C5LB1lAIdr9jI0hU931zkvcFX3/3G+qktytM
+        //2vgTzuumOk7LpJBjNAQdj1jo1Am7sf5Dj7IZTgAQUjiZoycdcdI+R9lCCDGaAo7HbHRrCo96FyP5Pg
+        sWAj2Vy8kWOIh/EizxA7ZUqRwSxQGHa5Y6OATXN2+P3ZDyB33eEiinfrrts7ZSqQwSxQHNx9x9j02Df8
+        7uz+e3fdRVz9t8LvjtJ135jkrS11100ymAkKhLvvGFd33/hd+Tdw113M1eccfneUrnuIOfuSZDATFIlR
+        5oy77L7xO7Pfftx1F3PVvUDwO0M8jBd5htgpU5oMZoNC0f2ODUKe1g+eWHXzLfw8n3Qkr3h1113cqtsU
+        4+c5zdDy8nFy112RDGaDYjFK953hsW/8ILzY1eFn+G/+6PA7L+CzH8VJb7EWFXD8XIbCPUrXHfI+apDB
+        jFAwWnfft9TrWgt5WnffxG5adheI8wOGr3H2Q+YL732sTnor4xHIjhZx3qyp9Z32jm6o17gW8gwxZ1+D
+        DGaEotH1jo0j5jjkUseoja+Dl/CzWNOixeF7d7+sTnori/PgD4HF+ja0LnKnQp5EhTzuuleQwaxQOLre
+        L33EPJO83XDXbULIU6iQx133CjKYFYqHu+/G3HXbRFTXPcROmZpkMDMUkNZd6267b3fdJkR13ZwWUvlr
+        6arrJhnMDEWkddca2X23fvDEKu66bcJdd0MymB0KySjdd+vHvi32xe//SJ30tm/uuhuSwexQTIbovgl5
+        uui+P/j259VJb/t1W53PayFP66475NtDCzLYAxSU1t13yB8dedJ331968AN10tt+hT2gAHlad90h3x5a
+        kMEeoKhk2LER8odHntTdt7tumwiZNkQed90byGAvUFjcfRfmrtsmQrpu5jjkUseopduum2SwFyguGXZs
+        RHXfrb9FSO66bSJqh0nry/q77rpJBnuCAtO6a43qvlvft/wF7rpN2HzHPeRw1x1ABnuDQtN9940ctyc5
+        m3PXbcLmbXXI4a47gAz2BoWm++6bOSY5m3rj/h110pttKt74/dZdd9hOmdZksEcoOK27700nNX5/9t7Z
+        LXz0zsvqxDfbtNOEvz/JV1vITpkMZLBHKDitu++rL7HF77a+4dZz3HXbGVef5/hdd92BZLBXKDxddt/4
+        vVQ3qXLXbRdc9eAF/J677kAy2CsUntbdN6c+Vn2y4+dvnPx+c+66bYFH6lw+B7/DR7WpXLUM1XWTDPYM
+        Baj1lrvFi5f4WU6XpLq60l23LbT4PMfPZnjG5lBdN8lgz1CAXpsWpAbYgZ/dPoj/fhNSXZjjrttW4pNv
+        zp7n+O83oXXhHq7rJhnsHQpRlgteuP2PUzn8QOHVoPy/tyDVzhJ69f1P3XXbte4CizQ7bC5K8lmUt4AP
+        T1Y/X1vIw8OzkcHeoRhl6L678va9N9VJb9a7x6pGjEAGR4CClO5y86zYdX/yzc+qE9+sd5sv589KBkeA
+        ouTueyF33TaoYbtuksFRoDC5+77AXbcNbNium2RwFChOqfZQZ+Su2wY1dNdNMjgSFKhUN3zKxF23DWzo
+        rptkcCQoUqnuG5KJu24b1PBdN8ngaFCo3H1PfOG9j9VJbzaCzfcc74EMjgbFyt33xL27X1YnvVnvrr7r
+        YW9kcEQoWO6+D9x128B20XWTDI4IRcvd94G7bhvUbrpuksFRoXCle05kbe66bWC76bpJBkeF4sWbQ6W6
+        k19t7rptULvqukkGR4YCluqpNTVl67p/dvd3nz558PsvYFz9fCs/e/f35OtUP2vN7KrrJhkcGYrYbrvv
+        D779eXXSV8OC94u//ZOn//jJB0//769/fdGv/v5vnv38/37/3zz96Z+9JHNG4wfHz3/4tae//MmDp7/6
+        6d/J13Xqn/7hfz77Wf5Otg+dHXmoxvroZHB0KGS7676/9OAH6qQvjgWNBZhFThW/Nf7hv/yHIh0vPxj+
+        z3/6w2cfFuq4azAHc9X6sLFnzj4QYlQyODoUs91137W7bhZtFltV4LZi5x5RxFlgf/HX/zbkg2WKOZlb
+        HddCLX4c22hkcA9Q0HbTfdd+vBmLlipo0VjEr52q4FTMkmmRrXgMz48Xtcuum2RwD1DUdtN913q8GQtp
+        xNTDGuxwOd+sXo/Cbptz1CpXSZw6Uq/HNtlt100yuBcobHyepCx4o6jVdbOTLTH9sBSnaC7NM3PXSI1u
+        ew4/2DwXHmq3XTfJ4J6gwD2eFryR1Oi6uUCnilVt54ojpy5afrgc8cODHyLqNdoqu+66SQb3BAWOT3eX
+        ha93NXaYZCncR6qAZ3uN/BBxAd/kCey66yYZ3BsUuiG779I7TDhVoopTa6cFnEVS/UxrnkLZ5C01jvdG
+        BvcGhW647rv01ZQsihmmIeY824nSwWtU/7Z2Frvul9Q43hsZ3CMUvKG6729996vqxA/DzlEVpEwyF+4j
+        7wVfzV33gQzuEQreUN13yWdT1trHvRee/17MXfcJGdwrFL1H0yLYo69877468UNwL7cqQHY9T58s5q77
+        hAxGQBG5AbyK8SF8OMH7at+EVJ+ieD2vgSyIPSl529dSl7zvHRd/1b+3/Ua6rhuv5xW4BXfhwwnG+N+K
+        7YqRwWuhcPCqRRbsNfPHfDxZmm0/eC38cFGvswuvvv+pOvFDuOsuh2sI6t/cfiNN143XchNYoNXrVPiz
+        4beslcFroHCwk96y6Jfij4PX0XX3XfKKSnfdZfkeKLMeQ/OuG6+Bnfaaoj3F3w1rVGVwLRSNqMeLcc65
+        +R8Jr6Hb7rvklEkPuzd6xg9H9e9un3ldjdOa8BrYbXPqRr2+NZgjpAuXwTVQMKKfys6bRd1Qx6oFx++2
+        +y61yyTrBTkj4Yej+rffucdqjNaE18C5a/XatripjrWGDC6FYlHqxk4s4E0/bXH87rrvkpfDe8qkDk+d
+        vKBpHcDxufCoXtdW7MA3NakyuASKBXeTyCISqNk8OI7dXff99r031UkSooeLckbgi3ae06zrxrFfgi3z
+        20s8UsdeSgaXQLGo1ZlyWqbJPDiOy22O6jWlVPJeJqrQWDzv+X5Ok64bx70Bj05eR0lXN6gyeAkKRe2u
+        tMlCJo75yslrSE+cGCH4VV4VGovHW8aqv8EONem6cdzXIGJhcqmr96/L4CUoFC060iYLmThm9IJsESXn
+        u12861J/gx3avKC3Fo75+uQ11HLVNwwZvEQVj0qqL2TieF10319/9xvqpAjhe5nUpf4GO/OhGosl4Zil
+        FiaXeKhe0yUyeA4KRYaFvKoLmThe+u675P5uF++6fJ/v+KsR5+BYNRYmL3miXtslMngOCkWW5z5WewwS
+        jpW++/7xnc+pkyKEi3dd1z4RfxDVum4cq+bC5FnT17aEDJ6DQsF7l8gC0kC1hUwcJ3X3rU6IKC7edam/
+        wY5U6bp5HKi5MHnJ6vctg+egUGQq3sT7qRRfyMQx2H1zzl29hqa++P0fqZMhTLZnQI5O/Q12okrXjeO0
+        Wpg8Z5fFm1hUi69O4xgZ33vxBw17t0ld6m+wE8W7bhyj5cLkOasbUBk8B8Ui8xNnbqnXHAX5ectbddym
+        Sl5ZSS7e9ez4/iZFu27kz7AwOWv6epeQwXNQLGpcFr9F0YVM5E931WXp4u37eNez4yssi20BRu40C5Mz
+        rrogSQYvQcFIOfd7othCJvKmmzopuU3wiFf+qWJjsX7xt38i//13oMgDWZA328KkclXDKYOXoGD0cNVh
+        kYVM5Ex3w6qS9zQ58l0F69jr49Cm4ywC8mZcmFSumuuXwUtQMHq550f4QibypZvzr1G8fT/v8vZ8P+/p
+        ONsKObMuTE5dfQ8XGVwCRaOLe34chC1kIlfUU4PC1Cje5KmTsnY8ZUIhO02QJ/XCpHB1cymDS6BocOdF
+        9rnvUyELmciz5TmdRXz0zsvqpAjni3XK2vmVlbfVeFsDObIvTE5ddU+TIxlcCoWjtwcWbFrIxO+mfL/i
+        pCiC99zwcyzL8PMrr781KuF3e1iYPMUPmU2bKmRwDRSPzPu+lasWMvE7/KaRruumyUlRlLvvMn727u/J
+        f++duerbMX6vl4XJIz4Nf/PuGhlcCwWEHWlPUyirFjLxsyzc7NpVruYmJ0ZR7r7juet+zqr93vj5XhYm
+        jzZ33EcyeA0UEV68k7bAzbh4a1n8TPr3VeqJ8XN+/sOvySJk6/GDcOdz3QoL8tkCx/8OPS1M0sX3tYYM
+        XguFJHWHOoNTIZz6ee4fFf+b3ya62FFTa7fJKT+QOAanodS/rz2bv34LnptewP/mouTtw39Xv5dV+DMI
+        ZHArFJSethF2r0Xx5hytKka2HD8A1b+tDYUfMkUu/ZfBCCgqWR7aMLwWxZu8eLmNFymHx8Jd7HbVMhgF
+        heUm9LSQ2aWH3/kDdeJU4emT63i6ZHhhC5NzZDASigsX/FJusRtF6bsKnsPu0btP1vF0yfBCFybnyGA0
+        FJgeFzK70bJ4k5+0s5x3lwyv2sPRZbAUFBovZBZQ+kk6S/iug8vs9a6BO1BsYXKODJaEYuOFzGCln2G5
+        BC/e8fz3eZ7nHlbRhck5MlgaCo4XMoNNTqYmOB3g+W/tlz95IP/NrHvFFybnyGANKDheyAz04zufUydW
+        dd7//SJ+I+E3E/XvZV2rsjA5RwZrQdHxQmaQGo9CW8oLmL/lBcphVVuYnCODtaH4eCFzozfu31EnWDO+
+        gOdQuH0hzmiqL0zOkcEWUIC8kLnBF977WJ1oTe19B4p3lgynycLkHBlsBUXIC5kb1Hqizhp7LeCcOlL/
+        HtatZguTc2SwJRQhL2ReKdO896m9bSF04R7OQ0hVuEkGW0Mh8kLmFb7yvfvqxGtuT3vAvZd7OJufrVmK
+        DGaBguSFzBVeff9TdfKlsIcC7ifiDCfFwuQcGcwERckLmSu0vMPgJSMXcBfuoaRamJwjg9mgKHkhc6Fs
+        WwanRizgLtxD4cLk5ocD1yCDGaEweSFzodrPtFxrpALuwj2UlAuTc2QwKxQmL2QukHXXyakRCrgL91DS
+        LkzOkcHMUJxYwL2QeUbGC3aUngu4d5UMJfXC5BwZ7AGK1FvTomW/1eq5lmv1WMC9j3sYXSxMzpHBXqBI
+        vQ5eyBQyPKBhKRbwf/zkA1kos3HhHkY3C5NzZLAnKFRcyHQBF7LcJnYpziGrgpmFC/cwulqYnCODvUGh
+        8kKmkPWKy3OyFnAX7mF0tzA5RwZ7hGLlhUyhl7nvU9kKuAv3MLpcmJwjgz1DwfJC5ome5r5PZSjgvB/3
+        kwe/L1+fdaXrhck5Mtg7FC0vZJ7IfMn8OS0f6OAHKQyj+4XJOTI4AhQtL2QecN939qsu53DKQhXXkly4
+        hzHEwuQcGRwFCpcXMg/evvemOrm7ULOAu3APY5iFyTkyOBIULi9kHvS2dfBUjQLOi4W451wd37oy1MLk
+        HBkcEYrX7hcyv/j9H6kTvRvsiNkZq8K7lQv3EIZcmJwjg6NCAdv9QmbP0ydUooC7cA9h2IXJOTI4MhSw
+        3S9k9rj3+xQL+K9++neyEK/lOwMO4UMYdmFyjgyODgVs1wuZPe8+OYq4oZUL9xDuqjG+BzK4Byhiu17I
+        7PXinVNbbmj18x9+Tea0ruxiYXKODO4JCtluFzK//u431IDoztqrMX25e/e4MPmaGs97IoN7g0K224XM
+        Hp66s8SSqzG9h3sIXJjczY6Sc2Rwj1DIdruQ2fP+71PsqOd2onB+/Gd3f1f+nnVjlwuTc2Rwr1DIdrmQ
+        +er7nw5TwNVOlF/+5IG3AvZvtwuTc2Rwz1DMWMAfnha3PRipgLNQcx6cXbgXJoew64XJOTJoz4r47WmB
+        Gx2vwOx9C6ENxQuTZ8ig/X8oaFzIlIVuVC7gloQXJi+QQfstFLTdLWS6gFtjXphcQAbteShor8CuFjJH
+        mgO3rnhhciEZtBehoO1uIdMF3CrzwuQKMmjzUNR2tZDJAt7rY9SsG16YvIIM2nkoartbyBzlSkxLxwuT
+        V5JBuwwFbXcLmW/cv6MGn9m1vDC5gQzaMihou1vI5N0IvRPFAnhhciMZtOVQ0LyQabbOLTWWbB0ZtPVQ
+        1HZ3Rea3vvtVNTDN5nhhMpAM2nVQ0G7CrubBPY1iC+3uGZOlyaBdDwVtlxf0eDuhnXFbjRXbRgZtOxS1
+        3T2hh0/mcRduJzxNUpAMWgwUNG4nfHxa4EbHhxv3/nR6C/EQvA2wIBm0OCho3I2yuy78K9+77y58n9ht
+        31RjwWLJoMVDQWMXvru5cO9I2ZW74G67Ehm0clDUbsHubjHrqZShcSeJ57Yrk0ErCwWNUyl3TwvcHvDy
+        +o/eeVkNfusTp0h8wU0jMmh1oKC9Bh+eFrjRcSrl7Xtvej68f54iaUwGrS4UNd6lcFe7UljEfafCLvFm
+        Ur7YJgEZtDZQ1HZXxLm10EW8CyzantdORAatHRS049bCXS1quoin5aKdlAxaDihq7sStFRft5GTQckFR
+        YxHf1R5xFnEvbDbBhUgX7Q7IoOWEosbdKbu7d7i3GBbHLX+3wQuRHZFByw1FjXcu5Lz4rqZUePtZT6mE
+        4sU1fmJ7p2TQ+oGixnuI764b5x0M/TSfqxy7bD/0t3MyaP1BUeMuld3NjfPSe94/xdMqZ7Fgcy7bN4wa
+        iAxa31DUOK3Ce6jsqiN3IX+OC/bgZNDGgaJ27Mh5L5W97B1/8ocP/uK9B9+5+ef/40//2V+eFLTRcQ6b
+        UyLeLbIDMmjjQmHjrWmPXfkoxZzvg++H7+uFuVwUs5fg5qGwscCpwtejx8Du+nXwTpGdkUHbDxY7OHbm
+        vdwki/P6fL2yWC+BYvcavAV84guLoCqOmXAahBfO8DXzg8g3hdo5GbR9Y0EE7mLhdkR2tK2KOos0j83X
+        wQ+YYtMBLIbAgn4L2KGzULYo6scizY6ahZqvyV21vUAGzeawgB6w62VRPS3wa/H3jjnomDtVV8nieSii
+        7HhZUOlY4K9xLMzEKQ/m9tY9W0UGzcwsNxk0M7PcZNDMzHKTQTMzy00GzcwsNxk0M7PcZNDMzHKTQTMz
+        y00GzcwsNxk0M7PcZNDMzHKTQTMzy00GzcwsNxk0M7PcZNDMzHKTQTMzy00GzcwsNxk0M7PcZNDMzHKT
+        QTMzy00GzcwsNxk0M7PcZNDMzHKTQTMzy00GzcwsNxk0M7PcZNDMzHKTQTMzy00GzcwsNxk0M7PcZNDM
+        zHKTQTMzy00GzcwsNxk0M7PcZNDMzHKTQTMzy00GzcwsNxk0M7PcZNDMzHKTQTMzy00Gzcwss6ef+X8B
+        JVwyGZ23JgAAAABJRU5ErkJggg==
+</value>
+  </data>
 </root>
